--- a/style/main.css
+++ b/style/main.css
@@ -306,65 +306,78 @@ hr {
   -moz-transition-property: -moz-transform;
   transition-property: transform; }
   .tile .tile-inner {
+    color: transparent;
+    background-size: 107px 107px;
     border-radius: 3px;
-    background: #eee4da;
+    /*background: #eee4da;*/
     text-align: center;
     font-weight: bold;
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    /*background: #eee4da;*/
+    background-image: url("tile-sets/tile-2.jpg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    /*background: #ede0c8;*/
+    background-image: url("tile-sets/tile-4.jpeg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    color: #f9f6f2;
-    background: #f2b179; }
+    color: transparent;
+    /*background: #f2b179;*/
+    background-image: url("tile-sets/tile-8.jpg"); }
   .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
-    background: #f59563; }
+    color: transparent;
+    /*background: #f59563;*/
+    background-image: url("tile-sets/tile-16.gif"); }
   .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
-    background: #f67c5f; }
+    color: transparent;
+    /*background: #f67c5f;*/
+    background-image: url("tile-sets/tile-32.jpg"); }
   .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
-    background: #f65e3b; }
+    color: transparent;
+    /*background: #f65e3b;*/
+    background-image: url("tile-sets/tile-64.jpeg"); }
   .tile.tile-128 .tile-inner {
-    color: #f9f6f2;
-    background: #edcf72;
+    color: transparent;
+    /*background: #edcf72;*/
+    background-image: url("tile-sets/tile-128.jpeg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
         font-size: 25px; } }
   .tile.tile-256 .tile-inner {
-    color: #f9f6f2;
-    background: #edcc61;
+    color: transparent;
+    /*background: #edcc61;*/
+    background-image: url("tile-sets/tile-256.jpg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
-    color: #f9f6f2;
-    background: #edc850;
+    color: transparent;
+    /*background: #edc850;*/
+    background-image: url("tile-sets/tile-512.jpg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
-    background: #edc53f;
+    color: transparent;
+    /*background: #edc53f;*/
+    background-image: url("tile-sets/tile-1024.png");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
-    color: #f9f6f2;
-    background: #edc22e;
+    color: transparent;
+    /*background: #edc22e;*/
+    background-image: url("tile-sets/tile-2048.jpg");
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
@@ -377,6 +390,11 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-super .tile-inner {
         font-size: 10px; } }
+
+  .tile img{
+    width: 100%;
+
+  }
 
 @-webkit-keyframes appear {
   0% {
