--- a/style/main.css
+++ b/style/main.css
@@ -2,13 +2,15 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #faf8ef;
+  background-image:url("background2.jpeg");
+  background-size: cover;
   color: #776e65;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
 body {
   margin: 80px 0; }
+
 
 input {
   display: inline-block;
@@ -52,7 +54,9 @@ h1.title {
   font-weight: bold;
   margin: 0;
   display: block;
-  float: left; }
+  float: left;
+  color:rgba(238, 228, 218, 0.35);
+   }
 
 @-webkit-keyframes move-up {
   0% {
@@ -199,7 +203,7 @@ hr {
   -ms-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
-  background: #bbada0;
+  background: #003B6F;
   border-radius: 6px;
   width: 500px;
   height: 500px;
@@ -585,7 +589,7 @@ hr {
 
 .restart-button {
   display: inline-block;
-  background: #8f7a66;
+  background: #003B6F;
   border-radius: 3px;
   padding: 0 20px;
   text-decoration: none;
@@ -609,7 +613,7 @@ hr {
 
 @media screen and (max-width: 520px) {
   html, body {
-    font-size: 15px; }
+    font-size: 15px;
 
   body {
     margin-top: 0;
@@ -617,7 +621,9 @@ hr {
 
   h1.title {
     font-size: 27px;
-    margin-top: 15px; }
+    margin-top: 15px;
+    color:#003B6F;
+     }
 
   .container {
     width: 280px;
@@ -642,8 +648,10 @@ hr {
     padding: 0;
     display: block;
     box-sizing: border-box;
-    margin-top: 2px; }
+    margin-top: 2px; 
 
+    background-color:#003B6F;
+                 }
   .game-container {
     margin-top: 17px;
     position: relative;
@@ -1033,7 +1041,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 10px; } }
-.app-notice {
+/*.app-notice {
   position: relative;
   -webkit-animation: pop-in-big 700ms ease 2s both;
   -moz-animation: pop-in-big 700ms ease 2s both;
@@ -1067,4 +1075,4 @@ hr {
       -moz-animation: pop-in-small 700ms ease 2s both;
       animation: pop-in-small 700ms ease 2s both;
       margin-top: 10px;
-      height: 76px; } }
+      height: 76px; } }*/
